samples/_failures_safe/1761437941_b02706_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4b3f847.c: In function ‘main’:
./samples/SAFE/__tmp_a4b3f847.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_a4b3f847.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a4b3f847.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a4b3f847.c:150:21: error: expected declaration or statement at end of input
